# ARK-Gallery

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.github/workflows/: build.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: actions.ts
src/lib/components/: Actions.svelte  DeleteModal.svelte  DropPlaceholder.svelte  Filter.svelte  Footer.svelte  Gallery.svelte  Image.svelte  Modal.svelte  QuestionModal.svelte  TagsList.svelte
src/lib/components/elements/: Tooltip.svelte
src/lib/components/gallery/: ActionButton.svelte  BlurImagePanel.svelte  DetailField.svelte  Header.svelte  ImageDetails.svelte  ImageEditor.svelte
src/lib/components/ui/button/: index.ts
src/lib/components/ui/hover-card/: hover-card-content.svelte
src/lib/components/ui/select/: index.ts  select-content.svelte  select-item.svelte  select-separator.svelte  select-trigger.svelte
src/lib/components/ui/slider/: slider.svelte
src/lib/components/ui/tooltip/: tooltip-content.svelte
src/lib/store/: index.ts
src/lib/utils/: localstorage.ts  tools.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/view/: +page.svelte
