[package]
name = "ark-gallery"
version = "0.1.0"
description = "ARK Gallery"
authors = ["ARK Builders"]
license = "MIT"
repository = "https://github.com/ARK-Builders/ARK-Gallery"
default-run = "ark-gallery"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [
    "protocol-asset",
    "fs-read-file",
    "fs-read-dir",
    "dialog-open",
    "devtools"
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
